--- a/gb/21/11/19/n13385999.md
+++ b/gb/21/11/19/n13385999.md
@@ -1,12 +1,12 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/fjmocf3555/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/fjmocf3555/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/fjmocf3555/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/fjmocf3555/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/fjmocf3555/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/fjmocf3555/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/fjmocf3555/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/fjmocf3555/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/fjmocf3555/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/fjmocf3555/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/fjmocf3555/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/fjmocf3555/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/fjmocf3555/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/fjmocf3555/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/fjmocf3555/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/fjmocf3555/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/fjmocf3555/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/fjmocf3555/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/fjmocf3555/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/fjmocf3555/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/fjmocf3555/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/fjmocf3555/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/fjmocf3555/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/fjmocf3555/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/fjmocf3555/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/fjmocf3555/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/fjmocf3555/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/fjmocf3555/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/fjmocf3555/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/fjmocf3555/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/fjmocf3555/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/fjmocf3555/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/fjmocf3555/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/fjmocf3555/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/fjmocf3555/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/fjmocf3555/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/fjmocf3555/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/fjmocf3555/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/fjmocf3555/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/fjmocf3555/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/fjmocf3555/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/fjmocf3555/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/fjmocf3555/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/fjmocf3555/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/fjmocf3555/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/fjmocf3555/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/fjmocf3555/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/hxcaik307/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>立委补选逼出庙产 镇澜宫公布含黄金18.6亿</h2>
 
 <h6></h6>
 <hr>
-<p>【大纪元2021年11月19日讯】（大纪元记者黄玉燕台湾台中报导）中二<ahref="https://github.com/fjmocf3555/djy/blob/master/gb/tag/%E7%AB%8B%E5%A7%94%E8%A1%A5%E9%80%89.md#1">立委补选</a>日趋白热化，资深媒体人周玉蔻猛批颜家、大甲<ahref="https://github.com/fjmocf3555/djy/blob/master/gb/tag/%E9%95%87%E6%BE%9C%E5%AE%AB.md#1">镇澜宫</a>董事长颜清标绑架妈祖，质疑庙产登录年年2.9亿，恐涉登载不实。为平息外界质疑，镇澜宫19日上午发出声明，并公布去年收支，光镇澜宫部分，包括现金、土地、黄金达18亿6688万6682元。镇澜宫表示，声明稿经本宫董监事会、会计师及法律顾问罗闳逸共同审阅内容后发布，再次感谢各界关心。</p>
-<figure id="13386001" aria-describedby="caption-13386001" style="width: 449px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2021/11/id13386001-528166-450x637.jpg" target="_blank" rel="noreferrer noopener"> <img class="" src="https://i.epochtimes.com/assets/uploads/2021/11/id13386001-528166-450x637.jpg" alt="大甲镇澜宫针对外界质疑财产申报相关报导，作出六点声明。" width="449" b="636" /></a><figcaption id="caption-13386001" class="wp-caption-text">大甲<ahref="https://github.com/fjmocf3555/djy/blob/master/gb/tag/%E9%95%87%E6%BE%9C%E5%AE%AB.md#1">镇澜宫</a>针对外界质疑财产申报相关报导，作出六点声明。（大甲镇澜宫提供）</figcaption></figure>
+<p>【大纪元2021年11月19日讯】（大纪元记者黄玉燕台湾台中报导）中二<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E7%AB%8B%E5%A7%94%E8%A1%A5%E9%80%89.md#1">立委补选</a>日趋白热化，资深媒体人周玉蔻猛批颜家、大甲<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E9%95%87%E6%BE%9C%E5%AE%AB.md#1">镇澜宫</a>董事长颜清标绑架妈祖，质疑庙产登录年年2.9亿，恐涉登载不实。为平息外界质疑，镇澜宫19日上午发出声明，并公布去年收支，光镇澜宫部分，包括现金、土地、黄金达18亿6688万6682元。镇澜宫表示，声明稿经本宫董监事会、会计师及法律顾问罗闳逸共同审阅内容后发布，再次感谢各界关心。</p>
+<figure id="13386001" aria-describedby="caption-13386001" style="width: 449px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2021/11/id13386001-528166-450x637.jpg" target="_blank" rel="noreferrer noopener"> <img class="" src="https://i.epochtimes.com/assets/uploads/2021/11/id13386001-528166-450x637.jpg" alt="大甲镇澜宫针对外界质疑财产申报相关报导，作出六点声明。" width="449" b="636" /></a><figcaption id="caption-13386001" class="wp-caption-text">大甲<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E9%95%87%E6%BE%9C%E5%AE%AB.md#1">镇澜宫</a>针对外界质疑财产申报相关报导，作出六点声明。（大甲镇澜宫提供）</figcaption></figure>
 <figure id="13386002" aria-describedby="caption-13386002" style="width: 500px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2021/11/id13386002-528167-450x300.jpg" target="_blank" rel="noreferrer noopener"> <img src="https://i.epochtimes.com/assets/uploads/2021/11/id13386002-528167-450x300.jpg" alt="镇澜宫董事长颜清标因疫情取消今年起驾宴，但大甲妈绕境照常，配合中央决定。" width="500" /></a><figcaption id="caption-13386002" class="wp-caption-text">镇澜宫董事长颜清标因疫情取消今年起驾宴，但大甲妈绕境照常，配合中央决定。（大纪元资料提供）</figcaption></figure>
 <p>根据大甲镇澜宫公布2020年收支，现金、收款等流动资产5亿5千2百60万9844元，另外非流动资产包括土地、建物、设备、金妈祖、黄金等，为13亿1427万6838元，合计总资产18亿6688万6682元。</p>
 <p>另外为大甲镇澜宫捐款成立的“财团法人大甲妈社会福利基金会”，及庙方创办的“大甲镇儿童家园”，也涉财务不清问。镇澜宫则公布去年收支状况，在流动资产有2亿9162万9155元，非流动资产2亿4315万5521元，总计5亿3千4百78万4676元。</p>
@@ -29,47 +29,47 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/fjmocf3555/djy/blob/master/gb/19/3/16/n11118152.md#1">立委补选结果公布 绿拿2席蓝仅1席</a></li>
-<li><a href="https://github.com/fjmocf3555/djy/blob/master/gb/19/10/9/n11578705.md#1">大甲镇澜宫副董涉假交易 呆账千万露馅</a></li>
-<li><a href="https://github.com/fjmocf3555/djy/blob/master/gb/20/2/27/n11899036.md#1">镇澜宫：大甲妈祖绕境延期 全力配合防疫工作</a></li>
-<li><a href="https://github.com/fjmocf3555/djy/blob/master/gb/20/4/27/n12064383.md#1">改善镇澜宫交通 大甲车站天桥八月完工</a></li>
-<li><a href="https://github.com/fjmocf3555/djy/blob/master/gb/21/10/27/n13333403.md#1">中二立委补选 蔡英文：要赢回来</a></li>
-<li><a href="https://github.com/fjmocf3555/djy/blob/master/gb/21/10/28/n13335602.md#1">蓝绿角逐台中立委补选 林静仪传已迁户口</a></li>
-<li><a href="https://github.com/fjmocf3555/djy/blob/master/gb/21/11/21/n13389175.md#1">台中购物节加码抽50万现金 消费登录金额破154亿</a></li>
-<li><a href="https://github.com/fjmocf3555/djy/blob/master/gb/21/11/21/n13388762.md#1">台日安全论坛 矢板明夫：台湾已成国际最热点</a></li>
-<li><a href="https://github.com/fjmocf3555/djy/blob/master/gb/21/11/19/n13386720.md#1">台湾有机棉花田 重写棉花新故事</a></li>
-<li><a href="https://github.com/fjmocf3555/djy/blob/master/gb/21/11/19/n13386659.md#1">台中柑橘甜柿上市 结盟插画招手年轻消费</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/3/16/n11118152.md#1">立委补选结果公布 绿拿2席蓝仅1席</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/10/9/n11578705.md#1">大甲镇澜宫副董涉假交易 呆账千万露馅</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/2/27/n11899036.md#1">镇澜宫：大甲妈祖绕境延期 全力配合防疫工作</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/4/27/n12064383.md#1">改善镇澜宫交通 大甲车站天桥八月完工</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/21/10/27/n13333403.md#1">中二立委补选 蔡英文：要赢回来</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/21/10/28/n13335602.md#1">蓝绿角逐台中立委补选 林静仪传已迁户口</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13615830.md#1">中市里长挂看板欢迎蓬佩奥 意外获回文：感谢</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13615884.md#1">俄乌战事未明 中市盘点避难室2.4万座</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13613300.md#1">侏?纪延伸体验  科博馆认养BRT公车站体</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13613305.md#1">中市祭囤房税  3户以下2.4％、4户以上3.6％</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank">解体中共复兴中华</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/10/28/n11616592.md#1" target="_blank">可心：从中共建政日与纽伦堡宣判同日说起（下）</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/12/7/n10897982.md#1" target="_blank">《求救信》感动欧洲议会观众：会哭很多次</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank">大陆见不到的震撼场面</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/8/10/n11444363.md#1" target="_blank">共产暴政录：中共积极响应北塔山入侵事件</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/4/24/n11210435.md#1" target="_blank">“4.25”那天我们一家人站在府右街上</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/fjmocf3555/djy/blob/master/gb/21/11/15/n13376584.md#1">法国多地拍到发光UFO 电视台争相报导</a></li>
-<li><a href="https://github.com/fjmocf3555/djy/blob/master/gb/21/11/16/n13379941.md#1">【百年真相】张高丽和江派官员淫乱秘闻</a></li>
-<li><a href="https://github.com/fjmocf3555/djy/blob/master/gb/21/11/12/n13372289.md#1">【未解之谜】外星人访谈录（2）来自外太空的远征军</a></li>
-<li><a href="https://github.com/fjmocf3555/djy/blob/master/gb/21/10/31/n13343096.md#1">故乡见闻：“真疯”</a></li>
-<li><a href="https://github.com/fjmocf3555/djy/blob/master/gb/21/11/18/n13384403.md#1">【未解之谜】寻找巨人的真相</a></li>
-<li><a href="https://github.com/fjmocf3555/djy/blob/master/gb/21/11/20/n13388010.md#1">【马克时空】日本P-1反潜机性能出众 开启自研军机序幕</a></li>
-<li><a href="https://github.com/fjmocf3555/djy/blob/master/gb/21/11/20/n13387269.md#1">新世纪影视新片《寻狗》热映 内涵深入人心</a></li>
-<li><a href="https://github.com/fjmocf3555/djy/blob/master/gb/21/11/20/n13387996.md#1">【十字路口】白宫小威呛北京 彭帅紧急求救？</a></li>
-<li><a href="https://github.com/fjmocf3555/djy/blob/master/gb/21/11/19/n13386902.md#1">昆凌6岁女偷戴妈妈珠宝 周杰伦怕搞丢追着跑</a></li>
-<li><a href="https://github.com/fjmocf3555/djy/blob/master/gb/21/11/19/n13387150.md#1">分析：彭帅事件为中共带来真正挑战和窘境</a></li>
-<li><a href="https://github.com/fjmocf3555/djy/blob/master/gb/21/11/19/n13385054.md#1">中共拟惩处翻墙软件提供者 分析：翻墙封不住</a></li>
-<li><a href="https://github.com/fjmocf3555/djy/blob/master/gb/21/11/19/n13386902.md#1">昆凌6岁女偷戴妈妈珠宝 周杰伦怕搞丢追着跑</a></li>
-<li><a href="https://github.com/fjmocf3555/djy/blob/master/gb/21/11/19/n13387175.md#1">范丞丞新片首映 范冰冰当观众入场支持</a></li>
-<li><a href="https://github.com/fjmocf3555/djy/blob/master/gb/21/11/19/n13385245.md#1">谢娜工作室成被告登上热搜 代言公司回应</a></li>
-<li><a href="https://github.com/fjmocf3555/djy/blob/master/gb/21/11/21/n13388773.md#1">徐若瑄平安出院返家 与儿子相拥合照晒幸福</a></li>
-<li><a href="https://github.com/fjmocf3555/djy/blob/master/gb/21/11/19/n13385648.md#1">日本唱片大奖获奖名单 BTS、LiSA、NiziU入列</a></li>
-<li><a href="https://github.com/fjmocf3555/djy/blob/master/gb/21/11/19/n13385796.md#1">小婴儿在餐厅噎到 陌生男子急取一物救他</a></li>
-<li><a href="https://github.com/fjmocf3555/djy/blob/master/gb/21/11/20/n13388038.md#1">哈士奇犬习惯做鬼脸 逗主人开心</a></li>
-<li><a href="https://github.com/fjmocf3555/djy/blob/master/gb/21/11/19/n13386020.md#1">2021年全球最不安全密码曝光 1秒内可破解</a></li>
-<li><a href="https://github.com/fjmocf3555/djy/blob/master/gb/21/11/16/n13379868.md#1">这些地雷早餐少碰 会越吃越胖 怎样吃才健康？</a></li>
-<li><a href="https://github.com/fjmocf3555/djy/blob/master/gb/21/11/21/n13388685.md#1">湖南大胃王太会吃 遭吃到饱餐厅封杀</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/14/n13576716.md#1">【百年真相】亲历者揭秘“1952细菌战”真相</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/25/n13605590.md#1">【未解之谜】地球磁极倒转进行中??</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610168.md#1">【神韵作品】唐瑞讲故事｜朗读｜小熊维尼第一章</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/17/n13582752.md#1">【奇事】两位卜算大师看出对方死期 但两人皆无法避过</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/22/n13597113.md#1">【百年真相】现代文字狱 胡风如何成了反革命？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13615200.md#1">吴明德：中共暗撑俄侵乌 恐成国际大输家</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13613897.md#1">【十字路口】锁链女遭拐卖凌虐 幕后大黑手曝光？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13613669.md#1">【马克时空】乌获欧盟战机 全面制裁砸晕俄罗斯</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607661.md#1">【更新2.27】乌总统：接下来24小时至关重要</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610320.md#1">乌克兰用无人机摧毁俄导弹系统 视频曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609576.md#1">俄银行被切断SWIFT系统 中共角色更尴尬</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609572.md#1">纳豆或暂退萤光幕一年 经纪人曝他最新病况</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609465.md#1">看海狮资料一目十行过目不忘 杨幂展超强记忆力</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612216.md#1">港星吴孟达过世一周年 长眠大马原因曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612151.md#1">TVB视后胡定欣确诊 陈豪吓得睡觉都戴口罩</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614510.md#1">香港TVB艺人祝文君罹癌离世 终年55岁</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612112.md#1">更强Omicron变种出现？致病性、传播力一次看</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/23/n13599631.md#1">疫苗、口罩难结束疫情 这一件事或成关键</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607140.md#1">睡眠十大好处 提高脑力、抗衰老都在内</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13608014.md#1">多吃橙色食物 不只护眼 还有这些强大好处</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13607888.md#1">调查：十对夫妻中三对存在“财务不忠”</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/fjmocf3555/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/fjmocf3555/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/11/19/n13385999.htm">立委补选逼出庙产 镇澜宫公布含黄金18.6亿</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/11/19/n13385999.htm">立委补选逼出庙产 镇澜宫公布含黄金18.6亿</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/fjmocf3555/djy/blob/master/gb/21/11/19/n13385999.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/fjmocf3555/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fjmocf3555/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/fjmocf3555/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/fjmocf3555/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/fjmocf3555/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fjmocf3555/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/fjmocf3555/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fjmocf3555/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/fjmocf3555/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fjmocf3555/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/fjmocf3555/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fjmocf3555/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/fjmocf3555/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fjmocf3555/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/fjmocf3555/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fjmocf3555/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/fjmocf3555/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fjmocf3555/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/fjmocf3555/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fjmocf3555/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/fjmocf3555/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fjmocf3555/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/fjmocf3555/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fjmocf3555/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/fjmocf3555/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fjmocf3555/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/fjmocf3555/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fjmocf3555/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/fjmocf3555/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fjmocf3555/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/fjmocf3555/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fjmocf3555/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/fjmocf3555/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fjmocf3555/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/fjmocf3555/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fjmocf3555/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/fjmocf3555/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fjmocf3555/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/fjmocf3555/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fjmocf3555/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/fjmocf3555/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fjmocf3555/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/fjmocf3555/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fjmocf3555/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/fjmocf3555/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fjmocf3555/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/fjmocf3555/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fjmocf3555/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/hxcaik307/djy/blob/master/gb/21/11/19/n13385999.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
